[project]
name = "WhetherWeather"
dynamic = ["version"] # whatever
requires-python = ">= 3.12"

[tool.ruff]
line-length = 120
indent-width = 2

[tool.ruff.lint]
extend-select = [
  # see codes in https://docs.astral.sh/ruff/rules/
  "I",      # Validate isort rules
  "ISC001", # single-line-implicit-string-concatenation
  "RUF010", # explicit-f-string-type-conversion
  "RUF013", # implicit-optional
  "UP",     # pyupgrade automatically upgrade syntax for newer python versions
]

[tool.ruff.lint.isort]
known-first-party = [
  "airtable_utils",
  "apis",
  "aws",
  "common",
  "deploy",
  "generate_service_review_data",
  "generate_usage_reports",
  "utils",
  "wiki_utils",
]
known-local-folder = ["tests"]
